--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -101,4 +101,11 @@
       filter: drop-shadow(0 3px 5px rgba(3, 11, 43, 0.2));
     }
   }
+
+  .point-icon {
+    background: white;
+    border: 0;
+    border-radius: 100%;
+    box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2);
+  }
 }
