--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,6 +1,6 @@
 <% title "Map" %>
 
-<section class="l-app -main">
+<section class="l-app -main -full">
   <div class="l-app-upperbar">
     <div class="wrapper">
       <div class="row collapse">
