--- a/app/views/projects/_grid.html.erb
+++ b/app/views/projects/_grid.html.erb
@@ -3,7 +3,7 @@
     <% items.each do |p| %>
       <div class="column small-12 medium-4">
         <div class="c-card">
-          <h3>
+          <h3 class="-underlined">
             <a href="/map?investigators[]=<%= p.project_leads.first.try(:id) %>">
               <%= p.project_leads.first.try(:name) %>
             </a>
