--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -107,5 +107,9 @@
     border: 0;
     border-radius: 100%;
     box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2);
+
+    &.-alternative {
+      background-color: #f57823;
+    }
   }
 }
