--- a/app/assets/stylesheets/layouts/_grid.scss
+++ b/app/assets/stylesheets/layouts/_grid.scss
@@ -8,8 +8,13 @@
 }
 
 .l-grid {
+  border-top:  1px solid $border-color-1;
   .column {
     display: flex;
     align-items: stretch;
+  }
+
+  .l-content, .l-sidebar {
+    margin-top: -1px;
   }
 }
