--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -13,6 +13,7 @@ $h3-font-size: 12px;
 
 $small-font-size: 12px;
 $medium-font-size: 20px;
+$large-font-size: 65px;
 
 /* Colors */
 $dark-slate-blue: #0f3046;
