--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -12,9 +12,18 @@ select {
 input[type="text"],
 input[type="number"],
 input[type="password"],
-input[type="email"], {
+input[type="email"] {
   border: 0;
   border-bottom: 1px solid $border-color-1;
+
+  &.-large {
+    color: $base-font-color;
+    font-size: $large-font-size;
+    letter-spacing: -1px;
+    line-height: $box-space;
+    border: 0;
+    outline: none;
+  }
 }
 
 input[type="radio"],
