project leads and collaborators counter

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -57,11 +57,11 @@
     }
 
     &.-blue {
-      background-color: #007bcd;
+      background-color: rgba(#007bcd, 0.85);
     }
 
     &.-orange {
-      background-color: #f57823;
+      background-color: rgba(#f57823, 0.85);
     }
 
     &.prunecluster {
