--- a/app/assets/stylesheets/components/_counters.scss
+++ b/app/assets/stylesheets/components/_counters.scss
@@ -8,17 +8,31 @@
       display: inline-block;
       width: 14px;
       height: 14px;
-      border-radius: 100%;
       margin-right: 1rem;
       vertical-align: -2px;
+      border: 1px solid;
     }
 
     &.-projects:before {
-      background-color: $primary-color;
+      border-radius: 100%;
+      background-color: rgba(#007bcd, 0.85);
+      border-color: darken(rgba(#007bcd, 0.85), 10);
+    }
+
+    &.-project-leads:before {
+      background-color: #78bbe8;
+      border-color: darken(#78bbe8, 10);
+    }
+
+    &.-collaborators:before {
+      background-color: white;
+      border-color: darken(white, 10);
     }
 
     &.-events:before {
+      border-radius: 100%;
       background-color: $alternative-color;
+      border-color: darken($alternative-color, 10);
     }
   }
 
