--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,6 @@
 <% title @project.title %>
 
-<section class="l-app">
+<section class="l-app -full">
   <div id="map" class="c-map"></div>
   <div class="l-app-title">
     <div class="wrapper">
