fixed margin on title

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,7 +4,7 @@
   <div id="map" class="c-map"></div>
   <div class="l-app-title">
     <div class="wrapper">
-      <div class="row">
+      <div class="row collapse">
         <div class="column small-8">
           <h1><%= @project.title %></h1>
         </div>
