--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -15,6 +15,8 @@ $small-font-size: 12px;
 $medium-font-size: 20px;
 $large-font-size: 65px;
 
+$bold-font-weight: bold;
+
 /* Colors */
 $dark-slate-blue: #0f3046;
 $light-blue: #66b8eb;
