--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,33 +1,30 @@
 <% title @event.title %>
 
-<section class="l-app -full">
+<section class="l-app">
   <div id="map" class="c-map"></div>
-  <div class="l-app-title">
-    <div class="wrapper">
-      <div class="row collapse">
-        <div class="column small-8">
-          <h1><%= @event.title %></h1>
-        </div>
-      </div>
-    </div>
-  </div>
 </section>
 
-<div class="l-grid">
-  <div class="wrapper">
+<div class="wrapper">
     <div class="row collapse">
-      <div class="column small-8">
-        <div class="l-content">
-          <article class="l-content-article">
-            <%= @event.description.html_safe %>
-          </article>
+      <div class="column small-7">
+      <div class="l-content">
+        <article>
+
+        </article>
+       <%= @event.description %>
         </div>
       </div>
-      <div class="column small-4">
-        <aside class="l-sidebar">
-
-        </aside>
-      </div>
-    </div>
-  </div>
+      <div class="column small-4 small-offset-1">
+         <aside>
+           <div class="l-content">
+            <div class="sidebar-item">
+               <h3><%= t 'location' %>(s)</h3>
+                  <ul class="c-list">
+                    <li class="list-item"><%=@event.city%>, <%=@event.country%></li>
+                  </ul>
+            </div>
+            </div>
+            </aside>
+         </div>
+         </div>
 </div>
