--- a/app/assets/stylesheets/components/_tabnav.scss
+++ b/app/assets/stylesheets/components/_tabnav.scss
@@ -20,13 +20,17 @@
 
       color: $inverse-font-color;
 
-      background-color: $app-bg-color;
-
       &.-active {
         color: $base-font-color;
         background-color: $body-bg-color;
         box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(0, 0, 0, 0.05);
       }
     }
+  }
+}
+
+.l-app.-main .c-tabnav {
+  .tabnav-item {
+    background-color: $app-bg-color;
   }
 }
