organization and investigator forms running
-> @TODO styles
-> @TODO complete organization and investigator form

--- a/app/assets/javascripts/templates/form/input.hbs
+++ b/app/assets/javascripts/templates/form/input.hbs
@@ -2,7 +2,7 @@
   <label
     {{#if name}}for="{{name}}"{{/if}}
     {{#if labelClass}}class="{{labelClass}}"{{/if}}
-    {{label}}
+    >{{label}}
   </label>
 {{/if}}
 <input
