--- a/app/assets/javascripts/templates/form/textarea.hbs
+++ b/app/assets/javascripts/templates/form/textarea.hbs
@@ -8,8 +8,7 @@
   {{#if inputClass}}class="{{inputClass}}"{{/if}}
   {{#if placeholder}}placeholder="{{placeholder}}"{{/if}}
   {{#if required}}required="true"{{/if}}
->
-  {{#if value}}{{value}}{{/if}}
+>{{#if value}}{{value}}{{/if}}
 </textarea>
 {{#if required}}
   <p class="c-required">* Field required</p>
