--- a/app/views/cancer_types/show.html.erb
+++ b/app/views/cancer_types/show.html.erb
@@ -4,6 +4,16 @@
 
   <div id="map" class="c-map"></div>
 
+  <div class="l-app-title">
+    <div class="wrapper">
+      <div class="row collapse">
+        <div class="column small-8">
+          <h1><%= @cancer_type.name %></h1>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="l-app-navbar">
     <div class="wrapper">
       <div class="row collapse">
