--- a/app/assets/javascripts/templates/countries_list.hbs
+++ b/app/assets/javascripts/templates/countries_list.hbs
@@ -5,15 +5,15 @@
         <div class="row collapse">
           <div class="column small-12">
             <h2 class="-underlined -global">{{region}}</h2>
+            <ul class="c-list row">
+              {{#each countries as |country|}}
+                <li class="column small-6 medium-3">
+                  <a class="list-item" href="/countries/{{country.country_iso_3}}?data=projects&sortby=title_asc&global=all&region={{country.region_iso}}&country={{country.country_iso_3}}">{{country.name}}</a>
+                </li>
+              {{/each}}
+            </ul>
           </div>
         </div>
-        <div class="row collapse">
-            {{#each countries as |country|}}
-              <ul class="c-list column small-6 medium-3">
-                <a class="list-item" href="/countries/{{country.country_iso_3}}?data=projects&sortby=title_asc&global=all&region={{country.region_iso}}&country={{country.country_iso_3}}">{{country.name}}</a>
-              </ul>
-            {{/each}}
-          </div>
       </div>
     </div>
   {{/each}}
