--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
+//= require _fonts
 //= require custom-foundation
 //= require leaflet
 //= require select2
@@ -5,7 +6,6 @@
 //= require pickadate/classic.date
 
 @import
-  "fonts",
   "settings",
   "mixins",
   "base",
