--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -26,7 +26,7 @@ $black: #000;
 
 /* Theme */
 $base-font-color: $dark-slate-blue;
-$base-bg-color: rgba($light-blue, 0.1);
+$base-bg-color: #e5e5e5;
 $body-bg-color: white;
 
 $inverse-font-color: white;
