--- a/app/assets/stylesheets/components/_list.scss
+++ b/app/assets/stylesheets/components/_list.scss
@@ -1,8 +1,10 @@
 .c-list {
   list-style: none;
   padding: 0;
+  margin: 0;
 
   .list-item {
-    margin: $inline-space 0;
+    display: block;
+    margin-bottom: $inline-space;
   }
 }
