project form almost complete
-> @TODO post request to create the entities
-> @TODO some css styles

--- a/app/assets/javascripts/templates/form/input.hbs
+++ b/app/assets/javascripts/templates/form/input.hbs
@@ -12,6 +12,8 @@
   {{#if placeholder}}placeholder="{{placeholder}}"{{/if}}
   {{#if value}}value="{{value}}"{{/if}}
   {{#if required}}required="true"{{/if}}
+  {{#if min}}min="{{min}}"{{/if}}
+  {{#if max}}max="{{max}}"{{/if}}
 />
 {{#if required}}
   <p class="c-required">* Field required</p>
