--- a/app/assets/javascripts/templates/investigator_form.hbs
+++ b/app/assets/javascripts/templates/investigator_form.hbs
@@ -4,6 +4,19 @@
       <h2 class="c-title">New Investigator</h2>
     </div>
   </div>
+
+  <div class="row">
+    <div class="column small-12">
+      <div id="investigatorname" class="c-select"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="column small-12">
+      <div id="investigatoremail" class="c-select"></div>
+    </div>
+  </div>
+
   <div class="row">
     <div class="column small-12">
       <div id="investigatorwebsite" class="c-select"></div>
