--- a/app/assets/javascripts/templates/organization_form.hbs
+++ b/app/assets/javascripts/templates/organization_form.hbs
@@ -1,12 +1,29 @@
 <form class="c-grid" action="#">
+
   <div class="row">
     <div class="column small-12">
       <h2 class="c-title">New Organization</h2>
     </div>
   </div>
+
   <div class="row">
     <div class="column small-12">
-      <div id="title" class="c-select"></div>
+      <div id="organizationname" class="c-select"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="column small-12">
+      <div id="organizationwebsite" class="c-select"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="column small-12 medium-6">
+      <div id="organizationlatitude" class="c-select"></div>
+    </div>
+    <div class="column small-12 medium-6">
+      <div id="organizationlongitude" class="c-select"></div>
     </div>
   </div>
 
