--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -1,8 +1,19 @@
+
 <% title "Map" %>
 
 <section class="l-app -full">
 
   <div id="map" class="c-map"></div>
+
+  <div class="l-app-title">
+    <div class="wrapper">
+      <div class="row collapse">
+        <div class="column small-8">
+          <h1><%= @investigator.name %></h1>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="l-app-navbar">
     <div class="wrapper">
