--- a/app/assets/javascripts/templates/toolbar.hbs
+++ b/app/assets/javascripts/templates/toolbar.hbs
@@ -1,12 +1,7 @@
 <ul class="c-toolbar">
-  {{!-- <li>
-    <button class="item btn-mapmenu-action {{color}}" data-action="sortby">
-      <svg class="c-svg {{color}}">
-        <use xlink:href="#icon-sort"></use>
-      </svg>
-      Sort by
-    </button>
-  </li> --}}
+  <li class="toolbar-item">
+    <div id="sortby"></id>
+  </li>
 
   <li class="toolbar-item -highlighted">
     <button class="c-btn js-toolbar-action" data-action="filter">
