Footer social media icons

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,9 +5,21 @@
         <div class="c-nav -social">
           <h2><%= t 'follow_us' %></h2>
           <ul>
-            <li><%= link_to t('linkedin'), 'https://www.linkedin.com/topic/global-oncology' %></li>
-            <li><%= link_to t('twitter'), 'https://twitter.com/globalonc' %></li>
-            <li><%= link_to t('facebook'), 'https://www.facebook.com/globalonc' %></li>
+            <li>
+              <a href="https://www.linkedin.com/topic/global-oncology" alt="Linkedin" title="Linkedin">
+                <svg class="c-icon icon-linkedin -blue -hv-opac"><use xlink:href="#icon-linkedin"></use></svg>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/globalonc" alt="Twitter" title="Twitter">
+                <svg class="c-icon icon-twitter -blue -hv-opac"><use xlink:href="#icon-twitter"></use></svg>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/globalonc" alt="Facebook" title="Facebook">
+                <svg class="c-icon icon-facebook -blue -hv-opac"><use xlink:href="#icon-facebook"></use></svg>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
