--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -13,6 +13,7 @@ $h3-font-size: 12px;
 
 $small-font-size: 12px;
 $medium-font-size: 20px;
+$big-font-size: 30px;
 $large-font-size: 65px;
 
 $bold-font-weight: bold;
