Using same api for every controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <%= yield %>
     </section>
     <%= render "shared/footer" %>
+    <%= Gon::Base.render_data %>
     <%= javascript_include_tag 'application' %>
   </body>
 </html>
