adds new dropdown handlebars component + style

--- a/app/assets/javascripts/templates/toolbar.hbs
+++ b/app/assets/javascripts/templates/toolbar.hbs
@@ -1,6 +1,7 @@
 <ul class="c-toolbar">
-  <li class="toolbar-item">
-    <div id="sortby"></id>
+  <li class="toolbar-item -sortby">
+    Sort by
+    <div class="toolbar-dropdown" id="sortby"></div>
   </li>
 
   <li class="toolbar-item -highlighted">
