--- a/app/assets/stylesheets/components/_toolbar.scss
+++ b/app/assets/stylesheets/components/_toolbar.scss
@@ -7,9 +7,23 @@
 
   .toolbar-item {
     color: $inverse-font-color;
+    display: flex;
+    align-items: center;
+    font-weight: $bold-font-weight;
 
     .c-icon, svg {
       fill: $inverse-font-color;
+    }
+
+    &.-sortby {
+      font-size: $small-font-size;
+      text-transform: uppercase;
+
+      .toolbar-dropdown {
+        height: 100%;
+        display: flex;
+        align-items: center;
+      }
     }
 
     &.-highlighted {
