--- a/app/sql_queries/projects_map_points.sql.erb
+++ b/app/sql_queries/projects_map_points.sql.erb
@@ -2,6 +2,7 @@ select
 projects.id as project,
 projects.title as title,
 investigators.name as investigator_name,
+investigators.id as investigator_id,
 countries.country_name as location_name,
 '{"type":"Point","coordinates":[' || addresses.latitude || ',' || addresses.longitude || ']}' as centroid,
 countries.country_iso_3 as iso,
@@ -58,4 +59,4 @@ from projects
     <% if @params[:user] %>
       and projects.user_id = <%= quote @params[:user] %>
     <% end %>
-group by project, title, location_name, centroid, iso, investigator_name ,is_project_lead
+group by project, title, location_name, centroid, iso, investigator_name, investigator_id, is_project_lead
