--- a/app/views/cancer_types/show.html.erb
+++ b/app/views/cancer_types/show.html.erb
@@ -4,6 +4,8 @@
 
   <div id="map" class="c-map"></div>
 
+  <%= render 'shared/legend' %>
+
   <div class="l-app-title">
     <div class="wrapper">
       <div class="row collapse">
