--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -81,6 +81,12 @@
         color: #f57823;
         border-color: #f57823;
       }
+
+      &.-points-cluster-icon {
+        color: $base-font-color;
+        border: 0;
+        font-size: $small-font-size;
+      }
     }
   }
 
