Map legend component

--- a/app/views/shared/_legend.html.erb
+++ b/app/views/shared/_legend.html.erb
@@ -1,12 +1,12 @@
 <div class="c-legend">
   <ul>
     <li>
-      <span></span>
-      <h3><%= t 'project_leads' %></h3>
+      <div class="dot"></div>
+      <span class="legend-label"><%= t 'project_leads' %></span>
     </li>
     <li>
-      <span></span>
-      <h3><%= t 'collaborators' %></h3>
+      <div class="dot"></div>
+      <span class="legend-label"><%= t 'collaborators' %></span>
     </li>
   </ul>
 </div>
