--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,6 +2,7 @@
 
 <section class="l-app -full">
   <div id="map" class="c-map"></div>
+  <%= render "shared/legend" %>
   <div class="l-app-title">
     <div class="wrapper">
       <div class="row collapse">
