--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -5,6 +5,8 @@
 
   <div id="map" class="c-map"></div>
 
+  <%= render "shared/legend" %>
+
   <div class="l-app-title">
     <div class="wrapper">
       <div class="row collapse">
