--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -4,7 +4,7 @@
 <section class="l-app -full">
 
   <div id="map" class="c-map"></div>
-
+  <%= render "shared/legend" %>
   <div class="l-app-title">
     <div class="wrapper">
       <div class="row collapse">
